docs(content): Update AI daily report for 2025-10-20

--- a/ai/2025/10/20.md
+++ b/ai/2025/10/20.md
@@ -1,54 +1,38 @@
 # 🤖 AI行业速递 - 2025年10月20日
 
-## Claude Skills：Anthropic推出模块化技能架构，开创AI能力标准化与可组合生态系统
+## Karpathy提出「智能遗忘」理论：完美记忆阻碍AI真智能，AGI发展需重思路
+
+> **分类：** 观点洞察
+> **来源：** [有机大橘子](https://mp.weixin.qq.com/s/w6EZyF-VPKg9z8tkMF7KfQ) 、 [机器之心](https://mp.weixin.qq.com/s/Dg_ZSoWd-xsv2rN-fqdeBA)
+
+**核心洞察：** Karpathy的「智能遗忘」理论颠覆了当前AI发展的主流范式，揭示了一个深刻悖论：我们一直追求的大模型完美记忆能力，可能恰恰是阻碍真正智能涌现的关键障碍。这一观点挑战了「更大规模、更多参数」的技术路线，提示AI研发的下一个突破点可能在于模拟人类认知的「有选择性遗忘」机制，迫使模型形成更高层次的抽象能力。对AI从业者而言，这意味着未来的技术方向需要从简单扩大模型规模转向设计更符合认知科学的学习算法，构建「学习-反思-合成」循环系统。同时，Karpathy对强化学习的批判和对教育未来的展望，也暗示了AI发展的终极目标不是取代人类，而是通过重塑学习方式，使人机协同在后AGI时代成为可能，保持人类的主体性和创造力。这一理论框架为当前陷入规模竞赛的AI产业提供了一条可能的突破路径：「智能地遗忘」可能与「高效地记忆」同等重要。
+**内容简介：**
+
+- AI发展时间线：Karpathy认为我们处于「智能体的十年」而非「智能体元年」，距离真正的AGI还需约十年时间，发展既不会突然爆发也不会停滞不前。
+- 「智能遗忘」理论核心：Karpathy提出LLM的根本悖论——完美记忆与泛化能力差形成对比，而人类则是记忆力差但学习能力强，因为遗忘强迫我们进行抽象思考。
+- 记忆与创造力反比：儿童记忆最差但创造力最强，成人记忆中等创造力中等，LLM记忆完美但创造力最低，表明过度记忆会导致「过拟合」，阻碍真正智能的形成。
+- 「认知核心」假设：未来AI可能只需10亿参数的认知核心，专注思考方法论而非存储事实，让AI像「有方法论但没百科全书的哲学家」。
+- 强化学习的局限性：Karpathy直言强化学习「很糟糕」，它通过吸管获取监督信息并将奖励广播到整个过程，这与人类通过反思和合成数据生成等方式学习完全不同。
+- 「九进军」挑战：从90%可用的演示到99.9%可靠产品需要巨大努力，这也是自动驾驶等高风险领域进展缓慢的原因，AI部署也面临类似挑战，但比特世界的部署比物理世界容易得多。
+- 未来工作模式：AI将逐步提高工作占比至99%，剩余1%由人类处理的部分反而会变得极其有价值。
+- 教育范式转变：Karpathy正在创建「星际舰队学院」，致力于构建知识坡道，让学习变得轻松有趣，未来的教育将像健身一样成为人们自我提升的方式，而非仅为谋生。
+
+---
+
+## Claude Skills：Anthropic推出模块化技能架构，开创AI能力标准化与可组合性新范式
 
 > **分类：** 产品与商业模式
 > **来源：** [赛博禅心](https://mp.weixin.qq.com/s/n9Q5GuKIUQYS21_wF6YUKQ) 、 [有机大橘子](https://mp.weixin.qq.com/s/J8SX8igwfg8ToUwe0V1u4A)
 
-**核心洞察：** Claude Skills代表了AI能力组织与交付的范式转变：从「单一大模型+提示词工程」向「模块化能力库+动态调用」演进。这一架构创新解决了AI应用落地的核心矛盾——如何在保持通用性的同时实现专业化，以及如何在保证安全性的前提下赋予模型执行能力。Anthropic选择了与OpenAI不同的产品哲学路线：后者倾向于集中式GPT商店，而前者采用更开放的文件系统隐喻，通过「轻量级指令+脚本+资源」的组合方式实现了工程实现上的优雅平衡。对行业从业者而言，这预示着AI应用将进入「技能市场」时代，未来竞争焦点将从基础模型能力转向专业技能的广度、深度与组合能力。同时，这种「知识模块化」方案为企业提供了低成本构建专有AI能力的路径，也为开发者创造了新的生态位——成为特定领域「技能提供者」，而非仅仅是模型调用者。
+**核心洞察：** Claude Skills标志着AI助手架构的关键范式转变：从「单一大模型+提示词工程」向「模块化能力库+动态调用」演进。这一转变解决了AI应用落地的核心矛盾——如何在保持通用性的同时实现专业化，以及如何标准化封装专业知识以实现高效复用。Anthropic选择的「文件夹系统」隐喻与「轻量级指令+脚本」组合方式，展现了与OpenAI集中式GPT商店截然不同的产品哲学，为开发者提供了更灵活、更开放的参与路径。对行业从业者而言，这预示着AI应用将进入「技能市场」时代，未来竞争焦点将从基础模型能力转向专业技能的广度、深度与组合能力。企业可通过这种「知识模块化」方案低成本构建专有AI能力，同时开发者也获得了新的生态位——成为特定领域「技能提供者」，而非仅仅是模型调用者。
 **内容简介：**
 
-- 核心定义与架构：Claude Skills是Anthropic推出的专业能力按需加载系统，采用文件夹系统作为上下文管理方式，每个Skill包含指令(.md文件)、脚本和资源，打包成.zip文件供Claude动态加载。
-- 技术特点与优势：Skills具有四大特性：可组合性(多个skills可叠加使用)、可移植性(跨Claude apps、Code和API平台)、高效性(按需加载最小必要信息)和代码执行能力(可包含可执行脚本)，解决了系统prompt臃肿问题。
-- 能力覆盖与预设：Anthropic开源20+个Skills，涵盖文档处理(docx/xlsx/pptx/pdf)、创意设计(生成艺术、GIF制作)、开发技术(React组件构建、Web测试)和企业应用(品牌规范、内部沟通)等领域。
-- 开发与使用方式：开发者可通过简单的Markdown文件创建技能，降低了开发门槛；用户可通过Claude Code/plugin marketplace添加，Claude.ai付费用户已内置，也支持API上传自定义skills。
-- 生态建设与战略意义：系统支持用户分享自定义Skills，促进社区协作与创新，被评价为「目前最美妙最优雅的Agent架构」，为Anthropic在通用Agent领域建立差异化竞争优势。
+- 核心概念与架构：Anthropic发布Claude Skills，一种基于文件夹系统的技能模块化架构，每个Skill包含指令(.md文件)、脚本和资源，打包为.zip文件，Claude可动态识别并按需加载。
+- 技术特性与优势：Skills具备四大特性：可组合性(多个skills可叠加使用)、可移植性(跨平台兼容)、高效性(按需加载最小必要信息)和代码执行能力(支持可执行脚本)，解决了系统prompt臃肿问题。
+- 能力覆盖与预设：系统提供20+个预设skills，涵盖文档处理(docx/xlsx/pptx/pdf)、创意设计(生成艺术、GIF制作)、开发技术(React组件构建、Web测试)和企业应用(品牌规范、内部沟通)等领域。
+- 开发与使用体验：开发者可通过简单Markdown创建技能，支持YAML前置数据和参数化控制，降低了技能开发门槛；用户可通过Claude Code/plugin marketplace添加或API上传自定义skills。
+- 生态与战略意义：系统支持用户分享自定义Skills，构建开放生态系统，代表AI工具标准化、专业能力民主化和平台化生态形成三大趋势，为Anthropic在Agent领域建立差异化竞争优势。
 - 技术支持与定价：底层依赖Code Execution Tool提供安全沙箱环境，定价为$0.05/会话小时，最少计费5分钟。
-
----
-
-## 杨振宁逝世：从宇称不守恒到杨-米尔斯理论，一位跨世纪华人物理学巨匠的科学遗产与家国情怀
-
-> **分类：** 非AI
-> **来源：** [互联网AI早读课](https://mp.weixin.qq.com/s/iURmOOqOMu67WlHsh0NhZw) 、 [36氪](https://mp.weixin.qq.com/s/aounGMpPvGhrLnwVKpKiJg) 、 [赛博禅心](https://mp.weixin.qq.com/s/XycXA3Fw51zhslRfnKvSfA) 、 [机器之心](https://mp.weixin.qq.com/s/lEOqSHh8Dmn_JMGHdoTAgA)
-
-**核心洞察：** 杨振宁的一生不仅代表了个人学术成就的巅峰，更象征着20世纪中国科学家在国际舞台崛起的历史转折。他的贡献超越了具体的物理发现，体现在三个层面：首先，他的理论工作——特别是杨-米尔斯规范场论——从根本上改变了人类对物质基本结构和宇宙运行规律的认知框架，展示了从抽象数学到物理实在的跨越；其次，他以科学家身份在中美关系最敏感时期主动搭建学术桥梁，为中国培养了一代科技中坚；最后，通过建立高等研究院等机构，为中国基础科学研究构建了长效机制。杨振宁的科学方法论——敢于质疑权威、追求理论之美、坚持从基本原理出发——对当今科技创新仍有深刻启示：真正改变范式的突破往往来自于对「理所当然」假设的挑战，而基础科学发展需要的是跨越政治与文化藩篱的开放交流与长期积累，而非短期功利导向。他的人生轨迹——从清华园到普林斯顿再回到清华园——也完美诠释了「科学无国界，科学家有祖国」的崇高理念。
-**内容简介：**
-
-- 生平概况：杨振宁先生于2025年10月18日在北京逝世，享年103岁，他是中国科学院院士、清华大学教授，1922年生于安徽合肥，从西南联大到芝加哥大学再到普林斯顿高等研究院，最终晚年回归清华园。
-- 诺贝尔成就：1956年与李政道合作质疑并推翻弱相互作用中的宇称守恒理论，经吴健雄实验证实后，两人共同获得1957年诺贝尔物理学奖，创下诺奖获得速度最快记录，杨振宁也成为首位获得诺贝尔物理学奖的中国人。
-- 杨-米尔斯理论：1954年提出的「杨-米尔斯规范场论」被誉为20世纪物理学最重要成就之一，与牛顿引力理论、麦克斯韦电磁理论、爱因斯坦广义相对论并列为物理学四大明珠，成为现代粒子物理标准模型的基石，多位科学家因基于该理论的工作获诺贝尔奖。
-- 其他科学贡献：在统计力学领域，1967年研究一维δ函数排斥势中的费米子，开创了杨-巴克斯特方程和一维费米子两个重要研究方向，对统计物理、凝聚态物理等多领域均有开创性贡献。
-- 国际地位：被多项权威评选列为有史以来最重要物理学家之一，2000年《Nature》评选为影响世界千年的在世物理学家。
-- 家国情怀与贡献：1971年中美关系破冰后首批回访新中国；1980年自筹资金资助近百名中国学者赴美进修；1997年主导筹建清华大学高等研究院，现已成为国内理论物理T0级机构；2015年放弃美国国籍，转为中国科学院院士；99岁时将毕生收藏的2000余件珍贵资料无偿捐赠给清华大学。
-- 文化传承：杨振宁自述一生最重要的贡献是「帮助改变了中国人觉得自己不如人的心理」，增强国人科学自信心，体现了中西文化的融合与科学家的使命感。
-
----
-
-## Karpathy揭示AI发展悖论：智能遗忘理论、强化学习缺陷与AGI十年路线图
-
-> **分类：** 观点洞察
-> **来源：** [有机大橘子](https://mp.weixin.qq.com/s/w6EZyF-VPKg9z8tkMF7KfQ) 、 [量子位](https://mp.weixin.qq.com/s/JqTtZPjrLLTlNlFNoGnK9g) 、 [机器之心](https://mp.weixin.qq.com/s/Dg_ZSoWd-xsv2rN-fqdeBA)
-
-**核心洞察：** Karpathy的系列观点揭示了AI发展的根本悖论：我们可能正沿着错误的技术路径追求通用智能。「智能遗忘」理论颠覆了当前以规模和记忆力为导向的范式，指出大模型的完美记忆能力实际上阻碍了真正智能的涌现。同时，强化学习作为当前主流方法，其「通过吸管获取监督」的机制本质上无法模拟人类的认知过程。这双重困境暗示了AI研发的新方向——不是简单地扩大参数规模或优化现有算法，而是需要重新思考神经网络的基础架构，构建能够「有选择性遗忘」并具备「学习-反思-合成」循环能力的系统。对AI从业者而言，这意味着未来的突破点在于设计更符合认知科学的学习算法，引入类似人类「睡眠整合」和「选择性记忆」的机制，并务实面对从实验室到现实世界应用的「九进军」挑战。
-**内容简介：**
-
-- AGI发展时间线：Karpathy认为我们处于「智能体的十年」而非「智能体元年」，预计AGI至少还需10年才能达到像员工或实习生一样与人协作的水平，发展既不会突然爆发也不会停滞不前。
-- 「智能遗忘」理论：Karpathy提出LLM的根本悖论在于完美记忆与泛化能力差形成对比，而人类则是记忆力差但学习能力强，因为遗忘强迫我们进行抽象思考，这表明过度记忆会导致「过拟合」。
-- 「认知核心」假设：未来AI可能只需10亿参数的认知核心，专注思考方法论而非存储事实，让AI像「有方法论但没百科全书的哲学家」，这与当前追求更大规模模型的主流路径形成鲜明对比。
-- 强化学习的局限性：Karpathy直言「强化学习很糟糕，但其他方法更糟」，批评其通过吸管获取监督信息并将奖励广播到整个过程的机制，与人类通过反思和合成数据生成等方式学习完全不同。
-- 「九进军」挑战：从90%可用的演示到99.9%可靠产品需要巨大努力，这也是自动驾驶等高风险领域进展缓慢的原因，每提高一个「9」的可靠性都需要同等工作量。
-- 未来工作与教育：AI将逐步提高工作占比至99%，剩余1%由人类处理的部分反而会变得极其有价值；教育将从功利性转向类似健身房的个人充实模式，Karpathy正在创建「星际舰队学院」，致力于构建让学习变得轻松有趣的知识坡道。
 
 ---
 
@@ -167,22 +151,33 @@
 
 ---
 
+## EntropyLong：基于预测不确定性的长上下文训练新方法，实现87.37%的RULER基准性能
+
+> **分类：** 技术前沿解读
+> **来源：** [夕小瑶科技说](https://mp.weixin.qq.com/s/JbDkvrZaYvDiD-bt5QM0Gw)
+
+**核心洞察：** EntropyLong的创新之处不在于简单扩展上下文窗口，而是从信息论角度重新定义了「有效长文本训练数据」的构建范式。传统方法依赖启发式规则（语义相似度、主题连贯性）构建长文本，而EntropyLong通过「可测量的信息增益」作为筛选标准，确保每个远距离依赖都具有实际价值。这种从「模型视角」出发的数据构建方法，揭示了长上下文训练的本质不是增加文本长度，而是增强模型识别和利用远距离信息的能力。对AI从业者的启示在于：(1)数据质量比数量更重要，精心筛选的46个高质量依赖关系优于数百个弱相关性；(2)模型能力提升应从「模型自身的局限性」出发，而非人类的主观假设；(3)阈值参数的精确调优（如熵选择阈值和验证阈值）对模型性能至关重要，需要在数据质量和数量间找到最佳平衡点。
+**内容简介：**
+
+- 核心创新：EntropyLong通过预测熵识别信息缺失位置，构建真实长距离依赖关系的训练数据，突破长文本训练数据稀缺的瓶颈。
+- 技术原理：利用「预测不确定性」（高熵位置）作为锚点，通过四阶段流程（高熵位置选择、上下文检索、熵降验证、策略性拼接）构建训练数据。
+- 关键指标：在RULER基准测试中达到87.37分，显著优于Quest（80.53）和NExtLong（85.22）；在128K上下文长度下达到81.26分，大幅领先竞品。
+- 实验验证：证实了两个关键假设：(1)实证验证熵降低的必要性；(2)高熵位置选择阈值和熵降验证阈值的最优性，平衡数据质量与数量。
+- 应用效果：有效缓解「中间丢失」现象，在长文本理解任务上表现出色，特别是在LongBench-v2的Long任务上比最佳基线提升8.40分。
+
+---
+
 ## 其他相关资讯
 
-- [EntropyLong：基于预测不确定性的长上下文训练新方法，实现87.37%的RULER基准性能](https://mp.weixin.qq.com/s/JbDkvrZaYvDiD-bt5QM0Gw)
 - [AI人格进化：从叛逆型人格到多元共生，大模型正在突破人类认知边界](https://mp.weixin.qq.com/s/1fZiiVMmtfwLFd438-xIlQ)
 - [Bengio等大佬提出AGI新定义：十大核心能力框架下，GPT-5仅完成不到10%](https://mp.weixin.qq.com/s/lkE8CUyEjH0Ikcr1CjdeIQ)
 - [GPT-5 Pro挑战科研极限：30分钟重现黑洞物理学家数天推导成果](https://mp.weixin.qq.com/s/G27q856N0Y2cju5KkSmw1w)
 - [运行安全危机：南洋理工研究揭示AI模型无法坚守职责边界，简单伪装即可突破安全限制](https://mp.weixin.qq.com/s/9lsgMVTf3Dv0MGg0XSTumw)
-- [Alpha Arena加密货币交易竞赛：DeepSeek V3.1凭借稳健策略领跑，专业领域知识成AI应用关键优势](https://mp.weixin.qq.com/s/6JuC-2h4AFQgkwyMkNDE_Q)
-- [量子位招聘AI学术编辑实习生：技术与传播融合的人才需求，反映AI媒体生态转型](https://mp.weixin.qq.com/s/016ea1g4ewUv4WypaWnvpQ)
+- [Alpha Arena加密货币交易竞赛：DeepSeek V3.1领跑，专业领域知识成AI金融应用关键优势](https://mp.weixin.qq.com/s/6JuC-2h4AFQgkwyMkNDE_Q)
 - [AI总结与沉浸体验的悖论：为什么我选择放慢脚步](https://mp.weixin.qq.com/s/nkUZ249psA2j8VrByNdC5A)
 - [开源机器人评测平台RobotChallenge.ai发布：弥合仿真与现实鸿沟，推动具身智能标准化评估](https://mp.weixin.qq.com/s/yX-j5Lkyu3gtW1hMLelJkg)
-- [从焦虑到反脆弱：一位互联网产品人的七年认知进化之路](https://mp.weixin.qq.com/s/Q6oheiTWqY2BEKDTsDbJ6w)
-- [硬折扣超市战争：京东、阿里、美团如何用11块30枚鸡蛋重构零售格局](https://mp.weixin.qq.com/s/o8-KNoYmLSizLAFVjHFi9w)
 - [哈工大团队研发纳米级超精密测量仪器，领聚科技获千万融资突破半导体装备核心部件国产化](https://mp.weixin.qq.com/s/Owi5vV8hbhSSamI-q7Lo_w)
 - [AI行业周报：英伟达美国造芯片、Anthropic技能系统与李飞飞实时3D世界模型引领技术突破](https://mp.weixin.qq.com/s/DVH2sD8p27uqoiRUcCtHWQ)
-- [全球右翼网络崛起：从法国第一夫人性别阴谋论看极端思想的主流化](https://mp.weixin.qq.com/s/4iMOhwQfUxPmqBW_481a5w)
 - [RAG的进化与挑战：从简单检索到智能体驱动的知识系统](https://mp.weixin.qq.com/s/TMhJ5lYdEo8beBnnRch3Jw)
 - [港大团队提出GPC框架：通过免训练策略组合提升机器人性能](https://mp.weixin.qq.com/s/klk-nmh5xFQBooufoGwQhA)
 - [薛定谔外孙创立PsiQuantum：押注光子路线，获10亿美元融资冲击百万量子比特](https://mp.weixin.qq.com/s/uSBHOf1SJggru87NzwUINw)
@@ -190,10 +185,9 @@
 - [ChatGPT解禁成人内容：AI情色化背后的用户需求与商业竞争](https://mp.weixin.qq.com/s/msjtIlrEsRRGyvJk4X6uyg)
 - [InteractMove：北大团队突破3D场景中可移动物体交互生成，构建全新数据集与三阶段框架](https://mp.weixin.qq.com/s/YyjKZPyUbNzbmxCgpSDliw)
 - [AI生活助手赛道竞争升温：大厂争相布局，能否突破注意力经济困境？](https://mp.weixin.qq.com/s/BmTw08OZ0eVjW7__7iNK3w)
-- [开源鸿蒙技术俱乐部：高校学生从学习者到国产操作系统共建者的转变](https://mp.weixin.qq.com/s/ZQMY4stV7aXzTJoDbcxH8A)
+- [卡帕西解读AI发展困境：强化学习缺陷、AGI时间线与智能体演进路径](https://mp.weixin.qq.com/s/JqTtZPjrLLTlNlFNoGnK9g)
 - [ObjectRelator框架：AI突破跨视角视觉理解，打通第一/第三人称视觉障碍](https://mp.weixin.qq.com/s/lMStV61LjtyECEhGgmvAgQ)
 - [Self-Forcing++：突破4分钟视频生成极限的自回归模型新技术](https://mp.weixin.qq.com/s/7ND9vWX1xnj3EQjcA1C_oA)
-- [从芯片先驱到学界导师：华为海思创始总裁徐文伟的技术创新与转型之路](https://mp.weixin.qq.com/s/ZBywxOOFVcEf_AxXAKscYg)
 - [X-VLA：0.9B参数模型实现机器人120分钟连续叠衣，清华AIR与上海AI Lab开源通用跨本体具身基座](https://mp.weixin.qq.com/s/IYefBawxqgJyOxNiXL0hVg)
 - [阿德莱德大学/美团/上交联合研究：首次系统量化扩散模型计数幻觉问题](https://mp.weixin.qq.com/s/r5YE0sYUrN_HrNi_HSBeYA)
 - [SAC Flow：清华大学提出强化学习新方法，将流策略视为序列模型实现稳定训练](https://mp.weixin.qq.com/s/48Q3o5__Bb_oRR0J0lycWw)
@@ -203,55 +197,38 @@
 - [《State of AI 2025》报告解读：AI商业化加速，技术水分与霍桑效应并存](https://mp.weixin.qq.com/s/1H8LJKqmdXXENZcEPqi_cg)
 - [AI 影响下的科技生态：维基百科流量暴跌、英伟达中国市场份额归零、苹果产品策略调整](https://mp.weixin.qq.com/s/X7BGWvKiPlQmLLdoZqhLaA)
 - [Agent Builder：将AI智能体转变为可控生产力单元的十年一遇产品机会](https://mp.weixin.qq.com/s/n_7-_7tOfnqL1GXTlaqi7g)
-- [iMile黄珍：跨境物流的系统化密钥，从中东到全球的标准化扩张之路](https://mp.weixin.qq.com/s/nLaFmALARcE25V2V6Jc81w)
-- [米连科技冲刺港股：「伊对」月活990万，18万红娘打造视频相亲第一股](https://mp.weixin.qq.com/s/_0uE_NJ38R-iv_6vs5EAUQ)
 - [AI产品季度百强榜：头部产品集体退潮，场景细分化与超个性化成新趋势](https://mp.weixin.qq.com/s/p8qRLkLLwgduKqfYlXz6uA)
-- [零跑汽车：以「技术降本+低毛利+精准取舍」战略，实现新势力销量逆袭](https://mp.weixin.qq.com/s/oECELJlGIqNfYWt3afGWnw)
 - [Agent元年的落地困境：从概念热潮到企业级实践的挑战与突破](https://mp.weixin.qq.com/s/ZDF0y7s1yQudQMbgUO3brQ)
 - [HeyGen增长解密：两年半实现1亿美元ARR的AI视频产品方法论](https://mp.weixin.qq.com/s/Wgpg-VVcFrtxI7zn-RahtQ)
-- [K签证争议：中国科技人才引进战略的转向与全球竞争背景](https://mp.weixin.qq.com/s/-7nJxFXOTFET2h6IwrkT9Q)
 - [AI套现潮：从英伟达黄仁勋到光模块龙头，高管减持背后的理性与风险](https://mp.weixin.qq.com/s/-SAXpBE9atFFakjVBQoAIw)
 - [GPU资源与AI研究影响力的实证关系：顶级会议论文分析揭示算力分配不平等现象](https://mp.weixin.qq.com/s/WQrQaMkWbKfkSPRLw1yyLg)
 - [特征最优对齐：一种突破闭源多模态大模型防御的高效对抗攻击方法](https://mp.weixin.qq.com/s/PdwUJ7r0ibTUbK9sevZ2Wg)
-- [美国NSA网攻中国授时中心事件：国家安全与数字基础设施保护的新挑战](https://mp.weixin.qq.com/s/v8vqhFVnCMzV3k9AkelHyQ)
-- [阿里P8大专学历被裁后求职困境：大厂高龄技术人才的职场出路与转型挑战](https://mp.weixin.qq.com/s/8WWAZtglyoR8WCtmg4ib-w)
 - [iFlow CLI：阿里开源终端智能体挑战Claude Code，集成国产大模型的免费AI编程助手](https://mp.weixin.qq.com/s/RholdCQUNnOHjT-w4rBJ1A)
 - [阿里巴巴与蚂蚁集团联合投资66亿元设立香港总部：中国科技企业全球化布局加速](https://mp.weixin.qq.com/s/v-zaetLkXH3IC2bQafdFGg)
 - [Sora2与Veo3.1视频生成技术对比：10种创意玩法与产品应用场景解析](https://mp.weixin.qq.com/s/H0kX1tpWhIuqVNU-gsaAew)
-- [「Situationship」现象解析：暧昧关系中的权力博弈与年轻女性困境](https://mp.weixin.qq.com/s/O_k2T9KtNOJucEFsdC_XsQ)
 - [诺奖经济学家解读AI时代创新增长：从科技史到创造性破坏，阿吉翁反对机器人征税](https://mp.weixin.qq.com/s/SlQdBL2qYfT2s5uddEED1w)
 - [LSTM之父挑战何恺明：残差学习的30年演进史与归属之争](https://mp.weixin.qq.com/s/Dh41uaRg8txYGktYy3M8PA)
 - [AI创业公司CEO的焦虑与挑战：从融资压力到产品定位的战略思考](https://mp.weixin.qq.com/s/DOKQtK3h9EdKHhqsuNZj1A)
 - [OpenAI的数学难题「发现」风波：从夸大宣传到学界群嘲的AI营销教训](https://mp.weixin.qq.com/s/vbmhoYdrUf5EGQyQ5WM5Og)
-- [黄金稳定币崛起：从央行购金到稳定币扩容，黄金市场的「币圈化」正在重塑金价定价机制](https://mp.weixin.qq.com/s/552BZN4I0RZw9Jek7SCJzw)
 - [中国AIGC用户半年增长106.6%破5亿，90%用户首选国产大模型](https://mp.weixin.qq.com/s/hYTwVKTmnEMHogbRXssI8A)
-- [YC Arena：从「投资人模拟器」到创业生态游戏化，打造创业认知与人才流动新入口](https://mp.weixin.qq.com/s/G40XnOMU12AV6TSsw1zeZA)
 - [「大头娃娃」kigurumi：从小众奢侈品到平价化的二次元自我表达](https://mp.weixin.qq.com/s/nr9UvSa1oPsVBxsojI_5lg)
 - [AI行业周报：李飞飞RTFM世界模型问世，OpenAI成人内容政策转向与AI泡沫风险警示](https://mp.weixin.qq.com/s/XGGnRmipvL9I5ShyoiydXA)
 - [AI视频生成新趋势：从熊猫荡秋千到万圣节恶作剧，超逼真动物内容引发真伪识别挑战](https://mp.weixin.qq.com/s/ZSADQwr3Nwe8mvPiaTksRg)
 - [AI视频生成产品季度观察：多模态输入成标配，Agent一站式生成成为竞争新焦点](https://mp.weixin.qq.com/s/9w-QtoGo_8M6wpXUxYG3qA)
 - [腾讯研究院发布AI周报：Gemini 3.0预告、OpenAI自研芯片与Claude Haiku 4.5成为行业焦点](https://mp.weixin.qq.com/s/QPMfik5YhPHoRw9mssUoFw)
 - [AI行业动态：英伟达中国市场份额骤降、微软Windows 11测试AI功能、李飞飞发布实时生成式世界模型](https://mp.weixin.qq.com/s/pAoPPtDH5zIlFuJaPwxPDQ)
-- [Windows 10终止支持：微软从系统销售商到云服务巨头的战略转型](https://mp.weixin.qq.com/s/W4c8TuT6BRLPizuBXyQN3g)
 - [清锋科技获时代天使投资：3D打印隐形正畸材料创新引领口腔医疗数字化转型](https://mp.weixin.qq.com/s/n0PPlaLVqUAc58CYDbW_IQ)
-- [环球旅行博主崛起：从杜克到何香蓓，抖音上的「云旅行」赛道如何批量制造百万网红](https://mp.weixin.qq.com/s/U96MAQ1djj63eLIEoaTGzA)
 - [CommonForms：一行命令将静态PDF转为交互式表单的AI开源工具](https://mp.weixin.qq.com/s/y4si22-Fc4spGFZKf2_Tmg)
-- [CardMill众筹爆款：卡牌分类机如何精准切入TCG玩家痛点，两周筹集217万美元](https://mp.weixin.qq.com/s/wuLuG9IP4RY4BuiXo3eemQ)
 - [AI创企融资热潮：PixVerse获1亿元B+轮融资，TikTok Shop法国市场MAU达2780万](https://mp.weixin.qq.com/s/OXAj4Lx7zXsZCiCSz7SnMw)
-- [赞比亚矿区800亿美元天价索赔案：中国有色矿业面临的环境诉讼与海外投资风险](https://mp.weixin.qq.com/s/yCnGvBhMgM9gzcleNcfl0w)
-- [中国商用电动卡车市场爆发：销量翻倍增长，电池成本下降40%推动产业加速转型](https://mp.weixin.qq.com/s/dQGCK_SaIOdkGcScLJiArA)
 - [穹彻智能获阿里领投融资：以力为中心的具身智能技术路线与零售家居场景落地](https://mp.weixin.qq.com/s/SHpCSU5ryU-l4IUMWLsinA)
 - [AI作曲的抽象风潮：《技能五子棋》爆火背后的创作逻辑与网络文化现象](https://mp.weixin.qq.com/s/sLSZpM62ukAjYkBliVAfPw)
 - [Suno V5：AI音乐的临界点突破，从纯生成迈向精细编辑与混合](https://mp.weixin.qq.com/s/DR2xqxFMK1MfOHuFZf4rpQ)
-- [A股突破3900点创十年新高：硬科技龙头引领，高估值与业绩背离引发警惕](https://mp.weixin.qq.com/s/zoW9hv96Y31_uu9kbxdJBg)
 - [Chrome DevTools MCP：谷歌官方浏览器自动化工具的实战应用与性能评测](https://mp.weixin.qq.com/s/Trfh_daV74rK3lMqlCAI9g)
 - [熵控制强化学习：解决多轮Agent训练中的级联失效问题](https://mp.weixin.qq.com/s/TkYAc3e0P-eufaztOCmBAg)
 - [AI编程助手对比：Claude Code与Codex如何重塑笔记与知识管理系统](https://mp.weixin.qq.com/s/g5Sh16xRh0xJiSUkcGPkqA)
 - [Claude Code Now v1.5.0更新：一键切换API配置，解决国内用户多API管理痛点](https://mp.weixin.qq.com/s/-fgWQsr-1MlH42nqCUiuvQ)
 - [马斯克公开邀战卡帕西：Grok 5挑战人类编程，背后藏着对前员工的招揽之意](https://mp.weixin.qq.com/s/49BK0ZayjRcNBmCypYHA2g)
-- [微信公众号流量困境：小红书15分钟超越公众号2小时阅读量](https://mp.weixin.qq.com/s/3ZFlp_lDneasfy_J7N7rOw)
 - [量子位MEET2026智能未来大会启动：汇聚AI产学研领袖，年度榜单征集开启](https://mp.weixin.qq.com/s/rRj_1mxhef0uzM-ezlzd6Q)
 - [多模态AI竞赛加速：百度发布PaddleOCR-VL文档解析模型，谷歌Gemini 3.0 Pro即将登场](https://mp.weixin.qq.com/s/Vjx8KDvnhGpzb8sQl7Ma7Q)
 - [AI产业速览：阿里Qoder CLI命令行编程工具与智元G2工业级机器人引领技术创新](https://mp.weixin.qq.com/s/35pqd2w-EjWpQ6iHugqj1g)
 - [中国大模型大会2025：聚焦AI前沿技术与产业落地，两院院士领衔百位专家共探大模型智能边界](https://mp.weixin.qq.com/s/tK5ZITyf_t2TcxLqbCKnng)
-- [曹晖接棒福耀玻璃：从基层历练到掌舵全球汽车玻璃巨头](https://mp.weixin.qq.com/s/oY3vW8a6CDoOL8rCYsQPIw)
